k8s/apps/learning-qwik/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: learning-qwik
spec:
  selector:
    app: learning-qwik
  ports:
  - port: 3000
    targetPort: 3000
